[package]
name = "stretch"
version = "0.3.2"
authors = ["Emil Sjölander <emil@visly.app>"]
edition = "2018"
include = ["src/**/*", "Cargo.toml"]
description = "High performance & cross-platform Flexbox implementation"
repository = "https://github.com/vislyhq/stretch"
readme = "README.md"
keywords = ["ios", "android", "cross-platform", "layout", "flexbox"]
categories = ["gui"]
license-file = "LICENSE"

[badges]
circle-ci = { repository = "vislyhq/stretch", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
arrayvec = { version = "0.5", optional = true, default-features = false }
hash32 = { version = "0.1", optional = true }
heapless = { version = "0.5", optional = true }
num-traits = { version = "0.2", optional = true, default-features = false }
typenum = { version = "1.12", optional = true }

[dependencies.hashbrown]
version = "0.9"
optional = true

[dependencies.serde]
version = "1"
features = ["serde_derive"]
optional = true

[features]
default = ["std"]
std = []
alloc = ["hashbrown", "num-traits", "hash32", "arrayvec"]
serde_camel_case = ["serde"]
serde_kebab_case = ["serde"]

[dev-dependencies]
criterion = "0.3"

[profile.release]
lto = true
panic = 'abort'

[[bench]]
name = "generated"
path = "benches/generated/mod.rs"
harness = false

[[bench]]
name = "complex"
harness = false

[workspace]
members = [ "scripts/gentest" ]
